# docs/swagger.yaml
@@ -579,6 +579,8 @@ definitions:
     type: object
   requests.AccountRequest:
     properties:
+      DrugStoreID:
+        type: integer
       IsAdmin:
         example: true
         type: boolean
@@ -590,7 +592,7 @@ definitions:
           type: string
         type: array
       Type:
-        example: staff/user/supplier/manufacturer
+        example: super_admin/staff/user/supplier/manufacturer
         type: string
       email:
         example: john.doe@gmail.com
@@ -870,6 +872,54 @@ definitions:
           type: integer
         type: array
     type: object
+  requests.PromotionDetailRequest:
+    properties:
+      Condition:
+        type: string
+      ProductID:
+        type: integer
+      PromotionID:
+        type: integer
+      Type:
+        type: string
+      Value:
+        type: number
+      VariantID:
+        type: integer
+      percent:
+        type: number
+    required:
+    - Condition
+    - ProductID
+    - Type
+    - Value
+    - VariantID
+    - percent
+    type: object
+  requests.PromotionDetailRequestList:
+    properties:
+      PromotionDetails:
+        items:
+          $ref: '#/definitions/requests.PromotionDetailRequest'
+        type: array
+    type: object
+  requests.PromotionRequest:
+    properties:
+      EndTime:
+        type: integer
+      Name:
+        example: Khuyến mại hè
+        type: string
+      Note:
+        example: Khuyến mại hè nè
+        type: string
+      StartTime:
+        type: integer
+    required:
+    - EndTime
+    - Name
+    - StartTime
+    type: object
   requests.RefreshRequest:
     properties:
       token:
@@ -1063,6 +1113,28 @@ definitions:
       Status:
         example: show/hide/approve/cancel/outofstock
         type: string
+      limit:
+        example: 10
+        type: integer
+      offset:
+        example: 0
+        type: integer
+      sort:
+        $ref: '#/definitions/requests.SortOption'
+        type: object
+    type: object
+  requests.SearchPromotionRequest:
+    properties:
+      FromTimeEnd:
+        type: integer
+      FromTimeStart:
+        type: integer
+      Name:
+        type: string
+      ToTimeEnd:
+        type: integer
+      ToTimeStart:
+        type: integer
       limit:
         example: 10
         type: integer
@@ -1307,8 +1379,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/responses.DataSearch'
-        "401":
-          description: Unauthorized
+        "400":
+          description: Bad Request
           schema:
             $ref: '#/definitions/responses.Error'
       security:
@@ -2279,6 +2351,274 @@ paths:
       summary: Change status of list product in system
       tags:
       - Medicine Management
+  /promotion:
+    post:
+      consumes:
+      - application/json
+      description: Perform create promotion
+      operationId: create-promotion
+      parameters:
+      - description: Create promotion
+        in: body
+        name: params
+        required: true
+        schema:
+          $ref: '#/definitions/requests.PromotionRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/responses.Data'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.Error'
+      security:
+      - BearerAuth: []
+      summary: Create promotion in system
+      tags:
+      - Promotion Management
+  /promotion/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Perform delete promotion
+      operationId: delete-promotion
+      parameters:
+      - description: id promotion
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.Data'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.Error'
+      security:
+      - BearerAuth: []
+      summary: Delete promotion in system
+      tags:
+      - Promotion Management
+    put:
+      consumes:
+      - application/json
+      description: Perform edit promotion
+      operationId: edit-promotion
+      parameters:
+      - description: body promotion
+        in: body
+        name: params
+        required: true
+        schema:
+          $ref: '#/definitions/requests.PromotionRequest'
+      - description: id promotion
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.Data'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.Error'
+      security:
+      - BearerAuth: []
+      summary: Edit promotion in system
+      tags:
+      - Promotion Management
+  /promotion/{id}/details:
+    delete:
+      consumes:
+      - application/json
+      description: Perform delete promotion detail by promotion
+      operationId: delete-promotion-detail-by-promotion
+      parameters:
+      - description: id promotion
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.Data'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.Error'
+      security:
+      - BearerAuth: []
+      summary: Delete promotion detail by promotion in system
+      tags:
+      - Promotion Management
+    get:
+      consumes:
+      - application/json
+      description: Perform search promotion detail
+      operationId: search-promotion-detail
+      parameters:
+      - description: id promotion
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.DataSearch'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.Error'
+      security:
+      - BearerAuth: []
+      summary: Search promotion detail in system
+      tags:
+      - Promotion Management
+    post:
+      consumes:
+      - application/json
+      description: Perform create multi promotion detail
+      operationId: create-promotion
+      parameters:
+      - description: Create promotion
+        in: body
+        name: params
+        required: true
+        schema:
+          $ref: '#/definitions/requests.PromotionDetailRequestList'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/responses.Data'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.Error'
+      security:
+      - BearerAuth: []
+      summary: Create multi promotion detail in system
+      tags:
+      - Promotion Management
+  /promotion/{id}/details/{d_id}:
+    delete:
+      consumes:
+      - application/json
+      description: Perform delete promotion detail
+      operationId: delete-promotion-detail
+      parameters:
+      - description: id promotion detail
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.Data'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.Error'
+      security:
+      - BearerAuth: []
+      summary: Delete promotion detail in system
+      tags:
+      - Promotion Management
+    put:
+      consumes:
+      - application/json
+      description: Perform edit promotion
+      operationId: edit-promotion-detail
+      parameters:
+      - description: body promotion
+        in: body
+        name: params
+        required: true
+        schema:
+          $ref: '#/definitions/requests.PromotionRequest'
+      - description: id promotion
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: id promotion detail
+        in: path
+        name: d_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.Data'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.Error'
+      security:
+      - BearerAuth: []
+      summary: Edit promotion detail in system
+      tags:
+      - Promotion Management
+  /promotion/find:
+    post:
+      consumes:
+      - application/json
+      description: Perform search promotion
+      operationId: search-promotion
+      parameters:
+      - description: Filter promotion
+        in: body
+        name: params
+        required: true
+        schema:
+          $ref: '#/definitions/requests.SearchPromotionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.DataSearch'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.Error'
+      security:
+      - BearerAuth: []
+      summary: Search promotion in system
+      tags:
+      - Promotion Management
   /refresh:
     post:
       consumes:
